# skeleton

./: meson.build  org.example.App.json  patterns-window.ui  windw.ui
data/: org.example.App.desktop.in  org.example.App.gschema.xml
po/: meson.build
src/: album.ui  main.py  meson.build  skeleton.gresource.xml  skeleton.in  window.py  window.ui
src/pages/: stub.ui
